--- a/node/public/notify.html
+++ b/node/public/notify.html
@@ -9,28 +9,23 @@
 <body>
     <h1>Cadastro de Evento de Notificação</h1>
 
-    <p>Preencha o formulário abaixo para cadastrar um evento de notificação. Sempre que qualquer país ganhar uma nova medalha, você receberá uma notificação de acordo com o tipo de notificação escolhido.</p>
-    <p>Escolha o tipo de notificação que deseja receber (Telegram ou Email) e forneça os detalhes necessários (ID do Telegram ou Email). Assim, você será informado sobre as conquistas dos países durante as Olimpíadas.</p>
+    <p>Preencha o formulário abaixo para cadastrar um evento de notificação. Sempre que qualquer país ganhar uma nova medalha, você receberá uma notificação via Telegram.</p>
 
     <form id="eventForm">
-        <label for="notificationType">Tipo de Notificação:</label>
-        <select id="notificationType" name="notificationType" required>
-            <option value="telegram">Telegram</option>
-            <option value="email">Email</option>
-        </select>
-
-        <label for="notificationDetail">Detalhes de Notificação:</label>
-        <input type="text" id="notificationDetail" name="notificationDetail" placeholder="ID do Telegram ou Email" required>
+        <label for="notificationDetail">ID do Telegram:</label>
+        <input type="text" id="notificationDetail" name="notificationDetail" placeholder="ID do Telegram" required>
 
         <button type="submit">Cadastrar</button>
     </form>
+
+    <button onclick="window.location.href='/'">Voltar para a Página Inicial</button>
 
     <script>
         document.getElementById('eventForm').addEventListener('submit', async function(event) {
             event.preventDefault();
             const formData = new FormData(event.target);
             const data = {
-                notificationType: formData.get('notificationType'),
+                notificationType: 'telegram',
                 notificationDetail: formData.get('notificationDetail')
             };
             try {
