--- a/node/public/index.html
+++ b/node/public/index.html
@@ -30,7 +30,7 @@
         .bar.gold { fill: gold; }
         .bar.silver { fill: silver; }
         .bar.bronze { fill: #cd7f32; }
-        .bar.total { fill: black; }
+        .bar.total { fill: lightgray; }
         .axis-label { font-size: 12px; }
         .axis--x .tick text {
             text-anchor: end;
