--- a/node/public/notify.html
+++ b/node/public/notify.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Cadastro de Evento de Notificação</h1>
 
-    <p>Preencha o formulário abaixo para cadastrar um evento de notificação. Sempre que qualquer país ganhar uma nova medalha, você receberá uma notificação por e-mail.</p>
+    <p>Preencha o formulário abaixo para cadastrar um evento de notificação. Sempre que qualquer país ganhar uma nova medalha, você receberá uma notificação por Telegram.</p>
 
     <form id="eventForm">
-        <label for="notificationDetail">E-mail:</label>
-        <input type="email" id="notificationDetail" name="notificationDetail" placeholder="Seu e-mail" required>
+        <label for="notificationDetail">ID do Telegram:</label>
+        <input type="text" id="notificationDetail" name="notificationDetail" placeholder="Seu ID do Telegram" required>
 
         <button type="submit">Cadastrar</button>
     </form>
@@ -25,7 +25,7 @@
             event.preventDefault();
             const formData = new FormData(event.target);
             const data = {
-                notificationType: 'email',
+                notificationType: 'telegram',
                 notificationDetail: formData.get('notificationDetail')
             };
             try {
